Added tzinfo to graphql query

--- a/kevin/pull em all.ipynb
+++ b/kevin/pull em all.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,14 +10,14 @@
     "import numpy as np\n",
     "import json\n",
     "import math\n",
-    "from datetime import datetime\n",
+    "from datetime import datetime, timezone, timedelta\n",
     "import time\n",
     "import os"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
     "        route = [route]\n",
     "        \n",
     "    per_hour=int(per_hour)\n",
-    "    timestamp=int(datetime(*dt_params).timestamp())*1000\n",
+    "    timestamp=int(datetime(*dt_params, tzinfo = timezone(timedelta(hours = -8))).timestamp())*1000 # use PST for tzinfo\n",
     "    T0 = time.time()\n",
     "    for i in range(hours*per_hour):\n",
     "        t0=time.time()\n",
@@ -414,6 +414,75 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Getting data... 0\n",
+      "That took 4.88 seconds.\n",
+      "Getting data... 1\n",
+      "That took 3.28 seconds.\n",
+      "Getting data... 2\n",
+      "That took 3.95 seconds.\n",
+      "Getting data... 3\n",
+      "That took 3.84 seconds.\n",
+      "Getting data... 4\n",
+      "That took 3.9 seconds.\n",
+      "Getting data... 5\n",
+      "That took 4.55 seconds.\n",
+      "Getting data... 6\n",
+      "That took 4.29 seconds.\n",
+      "Getting data... 7\n",
+      "That took 4.34 seconds.\n",
+      "Getting data... 8\n",
+      "That took 4.89 seconds.\n",
+      "Getting data... 9\n",
+      "That took 3.99 seconds.\n",
+      "Getting data... 10\n",
+      "That took 3.32 seconds.\n",
+      "Getting data... 11\n",
+      "That took 4.28 seconds.\n",
+      "Getting data... 12\n",
+      "That took 4.0 seconds.\n",
+      "Getting data... 13\n",
+      "That took 4.18 seconds.\n",
+      "Getting data... 14\n",
+      "That took 5.43 seconds.\n",
+      "Getting data... 15\n",
+      "That took 4.32 seconds.\n",
+      "Getting data... 16\n",
+      "That took 4.39 seconds.\n",
+      "Getting data... 17\n",
+      "That took 4.2 seconds.\n",
+      "Getting data... 18\n",
+      "That took 4.12 seconds.\n",
+      "Getting data... 19\n",
+      "That took 3.75 seconds.\n",
+      "Getting data... 20\n",
+      "That took 9.7 seconds.\n",
+      "Getting data... 21\n",
+      "That took 3.84 seconds.\n",
+      "Getting data... 22\n",
+      "That took 3.64 seconds.\n",
+      "Getting data... 23\n",
+      "That took 3.48 seconds.\n",
+      "Final formatting...\n",
+      "Done\n",
+      "That all took 105.07 seconds.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# testing sample routes scraping with tzinfo fix\n",
+    "with open('sample_routes_data_pst_15s.json', 'w') as outfile:\n",
+    "    json.dump(get_some_times(['1', '14'], hours = 24), outfile)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 18,
    "metadata": {},
    "outputs": [],
@@ -421,6 +490,403 @@
     "with open ('routes24h20181015v2.json','w') as outfile:\n",
     "    json.dump(allofem,outfile)\n",
     "# Final output is 185 MB, zips to 8 MB."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2019-02-27 19:30:18.818793: Starting query for 2019-01-14 00:00:00.\n",
+      "Getting data... 0\n",
+      "That took 3.99 seconds.\n",
+      "Getting data... 1\n",
+      "That took 2.53 seconds.\n",
+      "Getting data... 2\n",
+      "That took 3.63 seconds.\n",
+      "Getting data... 3\n",
+      "That took 3.56 seconds.\n",
+      "Getting data... 4\n",
+      "That took 3.88 seconds.\n",
+      "Getting data... 5\n",
+      "That took 3.51 seconds.\n",
+      "Getting data... 6\n",
+      "That took 4.69 seconds.\n",
+      "Getting data... 7\n",
+      "That took 5.2 seconds.\n",
+      "Getting data... 8\n",
+      "That took 5.7 seconds.\n",
+      "Getting data... 9\n",
+      "That took 7.45 seconds.\n",
+      "Getting data... 10\n",
+      "That took 5.22 seconds.\n",
+      "Getting data... 11\n",
+      "That took 5.08 seconds.\n",
+      "Getting data... 12\n",
+      "That took 4.96 seconds.\n",
+      "Getting data... 13\n",
+      "That took 5.21 seconds.\n",
+      "Getting data... 14\n",
+      "That took 6.18 seconds.\n",
+      "Getting data... 15\n",
+      "That took 4.9 seconds.\n",
+      "Getting data... 16\n",
+      "That took 6.05 seconds.\n",
+      "Getting data... 17\n",
+      "That took 5.57 seconds.\n",
+      "Getting data... 18\n",
+      "That took 5.2 seconds.\n",
+      "Getting data... 19\n",
+      "That took 3.05 seconds.\n",
+      "Getting data... 20\n",
+      "That took 4.33 seconds.\n",
+      "Getting data... 21\n",
+      "That took 4.45 seconds.\n",
+      "Getting data... 22\n",
+      "That took 9.45 seconds.\n",
+      "Getting data... 23\n",
+      "That took 4.41 seconds.\n",
+      "Final formatting...\n",
+      "Done\n",
+      "That all took 118.85 seconds.\n",
+      "2019-02-27 19:32:17.670316: Starting query for 2019-01-15 00:00:00.\n",
+      "Getting data... 0\n",
+      "That took 2.61 seconds.\n",
+      "Getting data... 1\n",
+      "That took 4.46 seconds.\n",
+      "Getting data... 2\n",
+      "That took 1.85 seconds.\n",
+      "Getting data... 3\n",
+      "That took 3.73 seconds.\n",
+      "Getting data... 4\n",
+      "That took 4.06 seconds.\n",
+      "Getting data... 5\n",
+      "That took 4.37 seconds.\n",
+      "Getting data... 6\n",
+      "That took 4.99 seconds.\n",
+      "Getting data... 7\n",
+      "That took 5.44 seconds.\n",
+      "Getting data... 8\n",
+      "That took 8.94 seconds.\n",
+      "Getting data... 9\n",
+      "That took 5.73 seconds.\n",
+      "Getting data... 10\n",
+      "That took 5.15 seconds.\n",
+      "Getting data... 11\n",
+      "That took 5.01 seconds.\n",
+      "Getting data... 12\n",
+      "That took 5.26 seconds.\n",
+      "Getting data... 13\n",
+      "That took 5.0 seconds.\n",
+      "Getting data... 14\n",
+      "That took 5.54 seconds.\n",
+      "Getting data... 15\n",
+      "That took 5.96 seconds.\n",
+      "Getting data... 16\n",
+      "That took 5.75 seconds.\n",
+      "Getting data... 17\n",
+      "That took 5.38 seconds.\n",
+      "Getting data... 18\n",
+      "That took 5.36 seconds.\n",
+      "Getting data... 19\n",
+      "That took 4.96 seconds.\n",
+      "Getting data... 20\n",
+      "That took 4.44 seconds.\n",
+      "Getting data... 21\n",
+      "That took 7.08 seconds.\n",
+      "Getting data... 22\n",
+      "That took 3.0 seconds.\n",
+      "Getting data... 23\n",
+      "That took 4.38 seconds.\n",
+      "Final formatting...\n",
+      "Done\n",
+      "That all took 119.05 seconds.\n",
+      "2019-02-27 19:34:16.719024: Starting query for 2019-01-16 00:00:00.\n",
+      "Getting data... 0\n",
+      "That took 4.61 seconds.\n",
+      "Getting data... 1\n",
+      "That took 3.52 seconds.\n",
+      "Getting data... 2\n",
+      "That took 2.78 seconds.\n",
+      "Getting data... 3\n",
+      "That took 3.73 seconds.\n",
+      "Getting data... 4\n",
+      "That took 3.57 seconds.\n",
+      "Getting data... 5\n",
+      "That took 4.45 seconds.\n",
+      "Getting data... 6\n",
+      "That took 5.11 seconds.\n",
+      "Getting data... 7\n",
+      "That took 5.38 seconds.\n",
+      "Getting data... 8\n",
+      "That took 6.39 seconds.\n",
+      "Getting data... 9\n",
+      "That took 5.78 seconds.\n",
+      "Getting data... 10\n",
+      "That took 5.43 seconds.\n",
+      "Getting data... 11\n",
+      "That took 5.2 seconds.\n",
+      "Getting data... 12\n",
+      "That took 5.16 seconds.\n",
+      "Getting data... 13\n",
+      "That took 4.41 seconds.\n",
+      "Getting data... 14\n",
+      "That took 5.29 seconds.\n",
+      "Getting data... 15\n",
+      "That took 5.31 seconds.\n",
+      "Getting data... 16\n",
+      "That took 5.63 seconds.\n",
+      "Getting data... 17\n",
+      "That took 17.22 seconds.\n",
+      "Getting data... 18\n",
+      "That took 5.19 seconds.\n",
+      "Getting data... 19\n",
+      "That took 4.99 seconds.\n",
+      "Getting data... 20\n",
+      "That took 4.3 seconds.\n",
+      "Getting data... 21\n",
+      "That took 4.09 seconds.\n",
+      "Getting data... 22\n",
+      "That took 4.18 seconds.\n",
+      "Getting data... 23\n",
+      "That took 3.92 seconds.\n",
+      "Final formatting...\n",
+      "Done\n",
+      "That all took 126.38 seconds.\n",
+      "2019-02-27 19:36:23.103953: Starting query for 2019-01-17 00:00:00.\n",
+      "Getting data... 0\n",
+      "That took 3.73 seconds.\n",
+      "Getting data... 1\n",
+      "That took 4.26 seconds.\n",
+      "Getting data... 2\n",
+      "That took 3.78 seconds.\n",
+      "Getting data... 3\n",
+      "That took 3.59 seconds.\n",
+      "Getting data... 4\n",
+      "That took 3.75 seconds.\n",
+      "Getting data... 5\n",
+      "That took 4.31 seconds.\n",
+      "Getting data... 6\n",
+      "That took 5.12 seconds.\n",
+      "Getting data... 7\n",
+      "That took 5.65 seconds.\n",
+      "Getting data... 8\n",
+      "That took 6.13 seconds.\n",
+      "Getting data... 9\n",
+      "That took 6.83 seconds.\n",
+      "Getting data... 10\n",
+      "That took 5.15 seconds.\n",
+      "Getting data... 11\n",
+      "That took 5.36 seconds.\n",
+      "Getting data... 12\n",
+      "That took 5.51 seconds.\n",
+      "Getting data... 13\n",
+      "That took 5.01 seconds.\n",
+      "Getting data... 14\n",
+      "That took 3.34 seconds.\n",
+      "Getting data... 15\n",
+      "That took 5.43 seconds.\n",
+      "Getting data... 16\n",
+      "That took 5.45 seconds.\n",
+      "Getting data... 17\n",
+      "That took 5.33 seconds.\n",
+      "Getting data... 18\n",
+      "That took 15.64 seconds.\n",
+      "Getting data... 19\n",
+      "That took 4.66 seconds.\n",
+      "Getting data... 20\n",
+      "That took 4.33 seconds.\n",
+      "Getting data... 21\n",
+      "That took 2.98 seconds.\n",
+      "Getting data... 22\n",
+      "That took 4.08 seconds.\n",
+      "Getting data... 23\n",
+      "That took 3.91 seconds.\n",
+      "Final formatting...\n",
+      "Done\n",
+      "That all took 123.93 seconds.\n",
+      "2019-02-27 19:38:27.036049: Starting query for 2019-01-18 00:00:00.\n",
+      "Getting data... 0\n",
+      "That took 3.73 seconds.\n",
+      "Getting data... 1\n",
+      "That took 3.61 seconds.\n",
+      "Getting data... 2\n",
+      "That took 3.55 seconds.\n",
+      "Getting data... 3\n",
+      "That took 3.65 seconds.\n",
+      "Getting data... 4\n",
+      "That took 3.69 seconds.\n",
+      "Getting data... 5\n",
+      "That took 4.16 seconds.\n",
+      "Getting data... 6\n",
+      "That took 4.65 seconds.\n",
+      "Getting data... 7\n",
+      "That took 5.3 seconds.\n",
+      "Getting data... 8\n",
+      "That took 3.8 seconds.\n",
+      "Getting data... 9\n",
+      "That took 5.41 seconds.\n",
+      "Getting data... 10\n",
+      "That took 5.15 seconds.\n",
+      "Getting data... 11\n",
+      "That took 4.91 seconds.\n",
+      "Getting data... 12\n",
+      "That took 5.13 seconds.\n",
+      "Getting data... 13\n",
+      "That took 4.02 seconds.\n",
+      "Getting data... 14\n",
+      "That took 5.0 seconds.\n",
+      "Getting data... 15\n",
+      "That took 5.33 seconds.\n",
+      "Getting data... 16\n",
+      "That took 3.63 seconds.\n",
+      "Getting data... 17\n",
+      "That took 5.43 seconds.\n",
+      "Getting data... 18\n",
+      "That took 5.28 seconds.\n",
+      "Getting data... 19\n",
+      "That took 4.65 seconds.\n",
+      "Getting data... 20\n",
+      "That took 4.19 seconds.\n",
+      "Getting data... 21\n",
+      "That took 4.1 seconds.\n",
+      "Getting data... 22\n",
+      "That took 2.52 seconds.\n",
+      "Getting data... 23\n",
+      "That took 3.94 seconds.\n",
+      "Final formatting...\n",
+      "Done\n",
+      "That all took 105.22 seconds.\n",
+      "2019-02-27 19:40:12.260707: Starting query for 2019-01-19 00:00:00.\n",
+      "Getting data... 0\n",
+      "That took 3.95 seconds.\n",
+      "Getting data... 1\n",
+      "That took 2.63 seconds.\n",
+      "Getting data... 2\n",
+      "That took 3.46 seconds.\n",
+      "Getting data... 3\n",
+      "That took 3.81 seconds.\n",
+      "Getting data... 4\n",
+      "That took 3.94 seconds.\n",
+      "Getting data... 5\n",
+      "That took 3.9 seconds.\n",
+      "Getting data... 6\n",
+      "That took 3.93 seconds.\n",
+      "Getting data... 7\n",
+      "That took 4.13 seconds.\n",
+      "Getting data... 8\n",
+      "That took 4.41 seconds.\n",
+      "Getting data... 9\n",
+      "That took 4.53 seconds.\n",
+      "Getting data... 10\n",
+      "That took 4.86 seconds.\n",
+      "Getting data... 11\n",
+      "That took 4.62 seconds.\n",
+      "Getting data... 12\n",
+      "That took 4.63 seconds.\n",
+      "Getting data... 13\n",
+      "That took 4.7 seconds.\n",
+      "Getting data... 14\n",
+      "That took 4.39 seconds.\n",
+      "Getting data... 15\n",
+      "That took 3.94 seconds.\n",
+      "Getting data... 16\n",
+      "That took 4.49 seconds.\n",
+      "Getting data... 17\n",
+      "That took 4.76 seconds.\n",
+      "Getting data... 18\n",
+      "That took 4.43 seconds.\n",
+      "Getting data... 19\n",
+      "That took 4.41 seconds.\n",
+      "Getting data... 20\n",
+      "That took 4.02 seconds.\n",
+      "Getting data... 21\n",
+      "That took 5.03 seconds.\n",
+      "Getting data... 22\n",
+      "That took 4.43 seconds.\n",
+      "Getting data... 23\n",
+      "That took 3.83 seconds.\n",
+      "Final formatting...\n",
+      "Done\n",
+      "That all took 101.59 seconds.\n",
+      "2019-02-27 19:41:53.856714: Starting query for 2019-01-20 00:00:00.\n",
+      "Getting data... 0\n",
+      "That took 5.78 seconds.\n",
+      "Getting data... 1\n",
+      "That took 2.46 seconds.\n",
+      "Getting data... 2\n",
+      "That took 3.95 seconds.\n",
+      "Getting data... 3\n",
+      "That took 5.33 seconds.\n",
+      "Getting data... 4\n",
+      "That took 3.54 seconds.\n",
+      "Getting data... 5\n",
+      "That took 3.89 seconds.\n",
+      "Getting data... 6\n",
+      "That took 4.06 seconds.\n",
+      "Getting data... 7\n",
+      "That took 4.28 seconds.\n",
+      "Getting data... 8\n",
+      "That took 4.6 seconds.\n",
+      "Getting data... 9\n",
+      "That took 4.53 seconds.\n",
+      "Getting data... 10\n",
+      "That took 4.7 seconds.\n",
+      "Getting data... 11\n",
+      "That took 4.51 seconds.\n",
+      "Getting data... 12\n",
+      "That took 10.67 seconds.\n",
+      "Getting data... 13\n",
+      "That took 4.96 seconds.\n",
+      "Getting data... 14\n",
+      "That took 4.65 seconds.\n",
+      "Getting data... 15\n",
+      "That took 4.84 seconds.\n",
+      "Getting data... 16\n",
+      "That took 3.04 seconds.\n",
+      "Getting data... 17\n",
+      "That took 4.74 seconds.\n",
+      "Getting data... 18\n",
+      "That took 4.48 seconds.\n",
+      "Getting data... 19\n",
+      "That took 4.53 seconds.\n",
+      "Getting data... 20\n",
+      "That took 4.45 seconds.\n",
+      "Getting data... 21\n",
+      "That took 2.31 seconds.\n",
+      "Getting data... 22\n",
+      "That took 4.11 seconds.\n",
+      "Getting data... 23\n",
+      "That took 2.74 seconds.\n",
+      "Final formatting...\n",
+      "Done\n",
+      "That all took 107.41 seconds.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# get a week's worth of data from route 14\n",
+    "daterange = [(2019, 1, 14 + i, 0) for i in range(7)]\n",
+    "\n",
+    "result = []\n",
+    "\n",
+    "for day in daterange:\n",
+    "    print(f\"{datetime.now()}: Starting query for {datetime(*day)}.\")\n",
+    "    result.extend(get_some_times(['14'], day, hours = 24))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('route_14_week_data.json', 'w') as f:\n",
+    "    json.dump(result, f)"
    ]
   },
   {
@@ -433,7 +899,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -447,7 +913,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
