--- a/mykelu/getallstops.ipynb
+++ b/mykelu/getallstops.ipynb
@@ -528,7 +528,7 @@
    "outputs": [],
    "source": [
     "with open('routes20181015v2stops.json', 'w') as f:\n",
-    "    df.reset_index().to_json(f)"
+    "    df.reindex(index = range(len(df)).to_json(f)"
    ]
   },
   {
