Remove print statment

--- a/kevin/pull em all.ipynb
+++ b/kevin/pull em all.ipynb
@@ -106,6 +106,31 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Getting data... 0\n",
+      "That took 9.77 seconds.\n",
+      "Getting data... 1\n",
+      "That took 5.93 seconds.\n",
+      "Final formatting...\n",
+      "Done\n",
+      "That all took 15.81 seconds.\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=get_some_times(['1','14','N','14X','12'],dt_params=(2018,10,15,12),hours=2)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -874,7 +899,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -888,7 +913,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
